--- a/System_For_AnalyzingProject/System_For_AnalyzingProject.csproj
+++ b/System_For_AnalyzingProject/System_For_AnalyzingProject.csproj
@@ -51,6 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestingDefect.cs" />
+    <Compile Include="Directories\TestedElemnets.cs" />
+    <Compile Include="Directories\TestingTypes.cs" />
     <Compile Include="Exceptions\Errors\0002. Registration.cs" />
     <Compile Include="Exceptions\Information\0001. Registration.cs" />
     <Compile Include="Forms\Authorization.cs">
@@ -61,6 +64,12 @@
     </Compile>
     <Compile Include="Encryption.cs" />
     <Compile Include="Exceptions\Errors\0001. Authentication.cs" />
+    <Compile Include="Forms\Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Main.Designer.cs">
+      <DependentUpon>Main.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\Registration.cs">
@@ -74,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Registration.resx">
       <DependentUpon>Registration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Main.resx">
+      <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
