--- a/System_For_AnalyzingProject/System_For_AnalyzingProject.csproj
+++ b/System_For_AnalyzingProject/System_For_AnalyzingProject.csproj
@@ -112,7 +112,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Resources\TT.docx" />
+    <None Include="Resources\TT.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
